fix: empty message alignment

--- a/app/src/features/apiClient/screens/apiClient/components/sidebar/apiClientSidebar.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/sidebar/apiClientSidebar.scss
@@ -14,6 +14,10 @@
     justify-content: center;
     align-items: center;
     padding: 8px;
+
+    .ant-typography {
+      text-align: center;
+    }
   }
 
   .api-client-sidebar-header {
